--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ html {
   @media all and (orientation: landscape) and (min-width: 1000px) {
     .logo-div {
       grid-row: 2 / 6;
-      grid-column: 2 / 4; }
+      grid-column: 3 / 5; }
       .logo-div__img {
         max-width: 100%;
         align-self: center; } }
@@ -131,7 +131,7 @@ html {
   @media all and (orientation: landscape) and (min-width: 1000px) {
     .logo-text {
       grid-row: 2 / 6;
-      grid-column: 4 / 8;
+      grid-column: 5 / 9;
       align-self: center;
       font-size: 20px;
       margin: 0;
@@ -146,11 +146,17 @@ html {
     margin: 0; } }
   @media all and (orientation: landscape) and (min-width: 1000px) {
     .heading {
-      grid-column: 2 / 10;
-      grid-row: 12 / 18;
+      grid-column: 3 / 11;
+      grid-row: 10 / 16;
       text-align: left;
       font-size: 35px;
       font-weight: bold; } }
+  @media all and (orientation: landscape) and (min-width: 1350px) {
+    .heading {
+      font-size: 40px;
+      grid-column: 3 / 13;
+      grid-row: 11 / 17;
+      padding-left: 10px; } }
 
 @media all and (orientation: landscape) {
   .btn__join-event {
@@ -163,8 +169,12 @@ html {
     font-size: 15px; } }
   @media all and (orientation: landscape) and (min-width: 1000px) {
     .btn__join-event {
-      grid-row: 19 / 21;
-      grid-column: 2 / 5; } }
+      grid-row: 17 / 19;
+      grid-column: 3 / 8;
+      font-size: 20px; } }
+  @media all and (orientation: landscape) and (min-width: 1350px) {
+    .btn__join-event {
+      grid-row: 18 / 20; } }
 
 @media all and (orientation: landscape) {
   .header-backdrop-div {
@@ -179,3 +189,11 @@ html {
         height: auto;
         align-self: end;
         justify-self: center; } }
+  @media all and (orientation: landscape) and (min-width: 1200px) {
+    .header-backdrop-div {
+      grid-column: 12 / 25;
+      grid-row: 6 / 25; } }
+  @media all and (orientation: landscape) and (min-width: 1350px) {
+    .header-backdrop-div {
+      grid-column: 13 / 25;
+      grid-row: 6 / 25; } }
