--- a/sass/main.scss
+++ b/sass/main.scss
@@ -148,13 +148,14 @@ html {
 
         @media (min-width: 1000px) {
             grid-row: 2 / 6;
-            grid-column: 2 / 4;
+            grid-column: 3 / 5;
 
             &__img {
                 max-width: 100%;
                 align-self: center;
             }
         }
+
     }
 
     .logo-text{
@@ -166,7 +167,7 @@ html {
 
         @media (min-width: 1000px) {
             grid-row: 2 / 6;
-            grid-column: 4 / 8;
+            grid-column: 5 / 9;
             align-self: center;
             font-size: 20px;
             margin: 0;
@@ -182,11 +183,18 @@ html {
         margin: 0;
 
         @media (min-width: 1000px) {
-            grid-column: 2 / 10;
-            grid-row: 12 / 18;
+            grid-column: 3 / 11;
+            grid-row: 10 / 16;
             text-align: left;
             font-size: 35px;
             font-weight: bold;
+        }
+
+        @media (min-width: 1350px) {
+            font-size: 40px;
+            grid-column: 3 / 13;
+            grid-row: 11 / 17;
+            padding-left: 10px;;
         }
     }
 
@@ -200,8 +208,13 @@ html {
         font-size: 15px;
 
         @media (min-width: 1000px) {
-            grid-row: 19 / 21;
-            grid-column: 2 / 5;
+            grid-row: 17 / 19;
+            grid-column: 3 / 8;
+            font-size: 20px
+        }
+
+        @media (min-width: 1350px) {
+            grid-row: 18 / 20;
         }
 
     }
@@ -220,6 +233,16 @@ html {
                 align-self: end;
                 justify-self: center;
             }
+        }
+
+        @media (min-width: 1200px) {
+            grid-column: 12 / 25;
+            grid-row: 6 / 25;
+        }
+
+        @media (min-width: 1350px) {
+            grid-column: 13 / 25;
+            grid-row: 6 / 25;
         }
 
 
