--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-html {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif; }
-
 .header {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -87,14 +81,15 @@ html {
 
 @media all and (orientation: portrait) {
   .header-backdrop-div {
-    grid-column: 1 / 13;
+    grid-column: 1 / 12;
     grid-row: 9 / 13;
     display: inline-grid; }
     .header-backdrop-div-img {
       max-width: 100%;
       height: auto;
       align-self: end;
-      justify-self: center; } }
+      justify-self: center;
+      overflow: hidden; } }
     @media all and (orientation: portrait) and (min-height: 1000px) {
       .header-backdrop-div-img {
         max-width: 75%; } }
@@ -197,3 +192,143 @@ html {
     .header-backdrop-div {
       grid-column: 13 / 25;
       grid-row: 6 / 25; } }
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif; }
+
+.about {
+  display: grid;
+  background: rgba(196, 196, 196, 0.29);
+  height: 150vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  padding-bottom: 20%; }
+
+.about-item {
+  display: grid;
+  grid-template-rows: repeat(12, 1fr);
+  grid-template-columns: repeat(12, 1fr);
+  height: 75vh; }
+
+.num {
+  grid-row: 2 / 4;
+  grid-column: 6 / 8;
+  background: #AADC59;
+  border-radius: 50%;
+  color: white;
+  padding: 10%;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  line-height: 40px;
+  font-size: 30px;
+  font-weight: bold;
+  align-self: center;
+  justify-self: center; }
+
+.productImg-div {
+  grid-row: 8 / 13;
+  grid-column: 2 / 12;
+  align-self: end; }
+  .productImg-div__img {
+    max-width: 100%;
+    height: auto;
+    overflow: hidden; }
+
+.explain {
+  grid-row: 4 / 7;
+  grid-column: 2 / 12;
+  text-align: center; }
+  .explain__heading {
+    font-size: 15px;
+    color: black;
+    font-weight: bold; }
+  .explain__paragraph {
+    font-size: 12px; }
+
+/*
+.about {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(48, 1fr);
+    font-size: 10px;
+    background: rgba(196,196,196, 0.29);
+    height: 140vh;
+}
+
+.productImg1-div {
+    grid-row: 12 / 20;
+    grid-column: 2 / 12;
+
+    &__img {
+        max-width: 100%;
+        height: auto;
+        overflow: hidden;
+    }
+}
+
+.explain1 {
+    grid-row: 6 / 9;
+    grid-column: 2 / 12;
+    text-align: center;
+}
+
+.productImg2-div {
+    grid-row: 39 / 46;
+    grid-column: 2 / 12;
+
+    &__img {
+        max-width: 100%;
+        height: auto;
+        overflow: hidden;
+    }
+}
+
+.explain2 {
+    grid-row: 28 / 32;
+    grid-column: 2 / 12;
+    text-align: center;
+}
+
+.about__heading {
+    font-size: 15px;
+    color: black;
+    font-weight: bold;
+    margin: 0;
+
+}
+
+.about__paragraph {
+    font-size: 13px;
+}
+
+.num {
+    background: #AADC59;
+    border-radius: 50%;
+    color: white;
+    padding: 10%;
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 30px;
+    font-weight: bold;
+    align-self: center;
+    justify-self: center;
+
+    &--1{
+        grid-row: 2 / 6;
+        grid-column: 6 / 8;
+    }
+
+    &--2{
+        grid-row: 24 / 28;
+        grid-column: 6 / 8;
+    }
+    
+}
+
+*/
