--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,253 +1,158 @@
-html {
+@import 'header';
+
+
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-.header {
+
+// layout by height. start with low height (ie landscape mode on phone), then portrait mode on phone, then desktop
+.about {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-    height: 100vh;
+    background: rgba(196,196,196, 0.29);
+    height: 150vh;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    padding-bottom: 20%;
 }
 
-// Styles for header section - mobile and potrait mode
-@media all and (orientation:portrait) {
+.about-item {
+    display: grid;
+    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: repeat(12, 1fr);
+    height: 75vh;
+}
 
-.logo-div {
-    grid-row: 3 / 4;
-    grid-column: 5 / 9;
+.num {
+    grid-row: 2 / 4;
+    grid-column: 6 / 8;
+    background: #AADC59;
+    border-radius: 50%;
+    color: white;
+    padding: 10%;
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 30px;
+    font-weight: bold;
+    align-self: center;
     justify-self: center;
-    display: inline-grid;
+}
+
+.productImg-div {
+    grid-row: 8 / 13;
+    grid-column: 2 / 12;
+    align-self: end;
 
     &__img {
         max-width: 100%;
         height: auto;
-        justify-self: center;
-        
-        @media (min-height: 1000px) {
-            max-width: 75%; 
-        }
+        overflow: hidden;
     }
-} 
-
-.logo-text{
-    grid-row: 4 / 5;
-    grid-column: 4 / 10;
-    text-align: center;
-    align-self: start;
-    padding: 0;
-    margin: 0;
-    font-weight: bold;
-    font-size: 16px;
-
-    @media (min-width: 330px) {
-        font-size: 23px;
-    }
-
-    @media (min-height: 1000px) {
-        font-size: 30px; 
-    }
-
-    @media (min-height: 1200px) {
-       font-size: 40px; 
-    }
-
 }
-  
 
-.heading {
-    grid-row: 5 / 7;
+.explain {
+    grid-row: 4 / 7;
     grid-column: 2 / 12;
-    font-size: 16px;
     text-align: center;
 
-    @media (min-width: 330px) {
-        font-size: 20px;
-    }
-
-    @media (min-height: 800px){
-        font-size: 25px;
-    }
-
-    @media (min-height: 1000px) {
-        font-size: 35px; 
-    }
-
-    @media (min-height: 1200px) {
-        font-size: 45px; 
-    }
-}
-
-.btn__join-event {
-    grid-row: 7 / 8;
-    grid-column: 4 / 10;
-    background-color: #AADC59;
-    color: white;
-    border-radius: 12px;
-    border: none;
-    height: 75%;
+    &__heading {
+    font-size: 15px;
+    color: black;
     font-weight: bold;
-    font-size: 14px;
-
-    @media (min-height: 800px){
-        margin-top: 30px;
-        font-size: 18px;
     }
 
-    @media (min-height: 1000px){
-        font-size: 30px;
+    &__paragraph {
+        font-size: 12px;
     }
 
-    @media (min-height: 1200px){
-        font-size: 40px;
-    }
 }
 
-.header-backdrop-div {
-    grid-column: 1 / 13;
-    grid-row: 9 / 13;
-    display: inline-grid;
 
-    &-img {
+/*
+.about {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(48, 1fr);
+    font-size: 10px;
+    background: rgba(196,196,196, 0.29);
+    height: 140vh;
+}
+
+.productImg1-div {
+    grid-row: 12 / 20;
+    grid-column: 2 / 12;
+
+    &__img {
         max-width: 100%;
         height: auto;
-        align-self: end;
-        justify-self: center;
-
-        @media(min-height: 1000px) {
-            max-width: 75%;
-        }
+        overflow: hidden;
     }
-
-}
 }
 
+.explain1 {
+    grid-row: 6 / 9;
+    grid-column: 2 / 12;
+    text-align: center;
+}
 
-// Styles for header section - mobile landscape and desktop
-@media all and (orientation:landscape) {
+.productImg2-div {
+    grid-row: 39 / 46;
+    grid-column: 2 / 12;
 
-    .header {
-        @media (min-width: 1000px) {
-            grid-template-rows: repeat(24, 1fr);
-            grid-template-columns: repeat(24, 1fr);
-        }
+    &__img {
+        max-width: 100%;
+        height: auto;
+        overflow: hidden;
     }
+}
 
-    .logo-div {
-        grid-row: 3 / 5;
-        grid-column: 5 / 9;
-        display: inline-grid;
+.explain2 {
+    grid-row: 28 / 32;
+    grid-column: 2 / 12;
+    text-align: center;
+}
 
-        &__img {
-            max-width: 50%;
-            height: auto;
-            justify-self: center;
-        }
-
-        @media (min-width: 1000px) {
-            grid-row: 2 / 6;
-            grid-column: 3 / 5;
-
-            &__img {
-                max-width: 100%;
-                align-self: center;
-            }
-        }
-
-    }
-
-    .logo-text{
-        grid-row: 5 / 6;
-        grid-column: 5 / 9;
-        text-align: center;
-        font-weight: bold;
-        font-size: 30px;
-
-        @media (min-width: 1000px) {
-            grid-row: 2 / 6;
-            grid-column: 5 / 9;
-            align-self: center;
-            font-size: 20px;
-            margin: 0;
-            text-align: left;
-        }
-    }
-
-    .heading {
-        grid-row: 6 / 7;
-        grid-column: 3 / 11;
-        font-size: 25px;
-        text-align: center;
-        margin: 0;
-
-        @media (min-width: 1000px) {
-            grid-column: 3 / 11;
-            grid-row: 10 / 16;
-            text-align: left;
-            font-size: 35px;
-            font-weight: bold;
-        }
-
-        @media (min-width: 1350px) {
-            font-size: 40px;
-            grid-column: 3 / 13;
-            grid-row: 11 / 17;
-            padding-left: 10px;;
-        }
-    }
-
-    .btn__join-event {
-        grid-row: 8 / 10;
-        grid-column: 5 / 9;
-        background-color: #AADC59;
-        color: white;
-        border-radius: 12px;
-        border: none;
-        font-size: 15px;
-
-        @media (min-width: 1000px) {
-            grid-row: 17 / 19;
-            grid-column: 3 / 8;
-            font-size: 20px
-        }
-
-        @media (min-width: 1350px) {
-            grid-row: 18 / 20;
-        }
-
-    }
-
-    .header-backdrop-div {
-        display: none;
-
-        @media (min-width: 1000px) {
-            display: inline-grid;
-            grid-column: 11 / 25;
-            grid-row: 6 / 25;
-
-            &-img {
-                max-width: 100%;
-                height: auto;
-                align-self: end;
-                justify-self: center;
-            }
-        }
-
-        @media (min-width: 1200px) {
-            grid-column: 12 / 25;
-            grid-row: 6 / 25;
-        }
-
-        @media (min-width: 1350px) {
-            grid-column: 13 / 25;
-            grid-row: 6 / 25;
-        }
-
-
-    }
-
-
+.about__heading {
+    font-size: 15px;
+    color: black;
+    font-weight: bold;
+    margin: 0;
 
 }
+
+.about__paragraph {
+    font-size: 13px;
+}
+
+.num {
+    background: #AADC59;
+    border-radius: 50%;
+    color: white;
+    padding: 10%;
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 30px;
+    font-weight: bold;
+    align-self: center;
+    justify-self: center;
+
+    &--1{
+        grid-row: 2 / 6;
+        grid-column: 6 / 8;
+    }
+
+    &--2{
+        grid-row: 24 / 28;
+        grid-column: 6 / 8;
+    }
+    
+}
+
+*/
