--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,8 @@ body {
 
 
 // layout by height. start with low height (ie landscape mode on phone), then portrait mode on phone, then desktop
+@media all and (orientation:portrait) {
+
 .about {
     display: grid;
     background: rgba(196,196,196, 0.29);
@@ -64,14 +66,164 @@ body {
     font-size: 15px;
     color: black;
     font-weight: bold;
+        @media (min-height: 600px) {
+            font-size: 17px;
+        }
+
+        @media (min-height: 700px) {
+            font-size: 19px;
+        }
+
+        @media (min-height: 800px) {
+            font-size: 21px;
+        }
+
+        @media (min-height: 1200px) {
+            font-size: 25px;
+        }
     }
 
     &__paragraph {
         font-size: 12px;
+
+        @media (min-height: 600px) {
+            font-size: 14px;
+        }
+
+        @media (min-height: 700px) {
+            font-size: 16px;
+        }
+
+        @media (min-height: 800px) {
+            font-size: 18px;
+        }
+
+        @media (min-height: 1200px) {
+            font-size: 22px;
+        }
     }
 
 }
 
+}
+
+@media all and (orientation:landscape) {
+
+    .about {
+        display: grid;
+        background: rgba(196,196,196, 0.29);
+        height: 200vh;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+
+        @media (min-width: 1000px) {
+            height: 100vh;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr;
+        }
+    }
+    
+    .about-item {
+        display: grid;
+        grid-template-rows: repeat(12, 1fr);
+        grid-template-columns: repeat(12, 1fr);
+        height: 100vh;
+    }
+    
+    .num {
+        grid-row: 3 / 5;
+        grid-column: 3 / 5;
+        background: #AADC59;
+        border-radius: 50%;
+        color: white;
+        padding: 10%;
+        height: 40px;
+        width: 40px;
+        text-align: center;
+        line-height: 40px;
+        font-size: 30px;
+        font-weight: bold;
+        align-self: center;
+        justify-self: center;
+
+        @media (min-width: 1000px) {
+            grid-row: 2 / 4;
+            grid-column: 5 / 9;
+        }
+
+        @media (min-width: 1200px) {
+            height: 60px;
+            width: 60px;
+            line-height: 60px;
+            font-size: 60px;
+        }
+    }
+    
+    .productImg-div {
+        grid-row: 2 / 12;
+        grid-column: 7 / 13;
+        align-self: center;
+    
+        &__img {
+            max-width: 100%;
+            height: auto;
+            overflow: hidden;
+        }
+
+        @media (min-width: 1000px) {
+            grid-column: 3 / 11;
+            grid-row: 6 / 9;
+        }
+    }
+    
+    .explain {
+        grid-row: 4 / 11;
+        grid-column: 4 / 10;
+        text-align: center;
+    
+        &__heading {
+        font-size: 14px;
+        color: black;
+        font-weight: bold;
+            @media (min-width: 650px) {
+                font-size: 16px;
+            }
+        }
+    
+        &__paragraph {
+            font-size: 12px;
+    
+            @media (min-width: 650px) {
+                font-size: 14px;
+            }
+        }  
+
+        @media (min-width: 1000px) {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+
+            &__heading {
+                font-size: 18px;  
+            }      
+
+            &__paragraph {
+                font-size: 16px;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            &__heading {
+                font-size: 22px;  
+            }      
+
+            &__paragraph {
+                font-size: 20px;
+            }
+        }
+    }    
+}
 
 /*
 .about {
