--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     display: inline-grid; }
     .logo-div__img {
       max-width: 100%;
-      height: auto;
+      max-height: 100%;
       justify-self: center; } }
     @media all and (orientation: portrait) and (min-height: 1000px) {
       .logo-div__img {
@@ -82,11 +82,11 @@
 @media all and (orientation: portrait) {
   .header-backdrop-div {
     grid-column: 1 / 12;
-    grid-row: 9 / 13;
+    grid-row: 8 / 13;
     display: inline-grid; }
     .header-backdrop-div-img {
       max-width: 100%;
-      height: auto;
+      max-height: 100%;
       align-self: end;
       justify-self: center;
       overflow: hidden; } }
@@ -97,7 +97,10 @@
 @media all and (orientation: landscape) and (min-width: 1000px) {
   .header {
     grid-template-rows: repeat(24, 1fr);
-    grid-template-columns: repeat(24, 1fr); } }
+    grid-template-columns: repeat(24, 1fr);
+    padding-left: 10%;
+    padding-right: 10%;
+    height: 85vh; } }
 
 @media all and (orientation: landscape) {
   .logo-div {
@@ -111,7 +114,7 @@
   @media all and (orientation: landscape) and (min-width: 1000px) {
     .logo-div {
       grid-row: 2 / 6;
-      grid-column: 3 / 5; }
+      grid-column: 1 / 3; }
       .logo-div__img {
         max-width: 100%;
         align-self: center; } }
@@ -126,7 +129,7 @@
   @media all and (orientation: landscape) and (min-width: 1000px) {
     .logo-text {
       grid-row: 2 / 6;
-      grid-column: 5 / 9;
+      grid-column: 3 / 7;
       align-self: center;
       font-size: 20px;
       margin: 0;
@@ -141,15 +144,15 @@
     margin: 0; } }
   @media all and (orientation: landscape) and (min-width: 1000px) {
     .heading {
-      grid-column: 3 / 11;
-      grid-row: 10 / 16;
+      grid-column: 1 / 10;
+      grid-row: 10 / 17;
       text-align: left;
-      font-size: 35px;
+      font-size: 30px;
       font-weight: bold; } }
   @media all and (orientation: landscape) and (min-width: 1350px) {
     .heading {
       font-size: 40px;
-      grid-column: 3 / 13;
+      grid-column: 1 / 11;
       grid-row: 11 / 17;
       padding-left: 10px; } }
 
@@ -165,11 +168,11 @@
   @media all and (orientation: landscape) and (min-width: 1000px) {
     .btn__join-event {
       grid-row: 17 / 19;
-      grid-column: 3 / 8;
+      grid-column: 1 / 6;
       font-size: 20px; } }
   @media all and (orientation: landscape) and (min-width: 1350px) {
     .btn__join-event {
-      grid-row: 18 / 20; } }
+      grid-row: 19 / 21; } }
 
 @media all and (orientation: landscape) {
   .header-backdrop-div {
@@ -177,8 +180,8 @@
   @media all and (orientation: landscape) and (min-width: 1000px) {
     .header-backdrop-div {
       display: inline-grid;
-      grid-column: 11 / 25;
-      grid-row: 6 / 25; }
+      grid-column: 10 / 25;
+      grid-row: 5 / 25; }
       .header-backdrop-div-img {
         max-width: 100%;
         height: auto;
@@ -186,8 +189,8 @@
         justify-self: center; } }
   @media all and (orientation: landscape) and (min-width: 1200px) {
     .header-backdrop-div {
-      grid-column: 12 / 25;
-      grid-row: 6 / 25; } }
+      grid-column: 9 / 25;
+      grid-row: 5 / 25; } }
   @media all and (orientation: landscape) and (min-width: 1350px) {
     .header-backdrop-div {
       grid-column: 13 / 25;
