--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -16,7 +16,7 @@
 
     &__img {
         max-width: 100%;
-        height: auto;
+        max-height: 100%;
         justify-self: center;
         
         @media (min-height: 1000px) {
@@ -100,12 +100,12 @@
 
 .header-backdrop-div {
     grid-column: 1 / 12;
-    grid-row: 9 / 13;
+    grid-row: 8 / 13;
     display: inline-grid;
 
     &-img {
         max-width: 100%;
-        height: auto;
+        max-height: 100%;
         align-self: end;
         justify-self: center;
         overflow: hidden;
@@ -126,6 +126,9 @@
         @media (min-width: 1000px) {
             grid-template-rows: repeat(24, 1fr);
             grid-template-columns: repeat(24, 1fr);
+            padding-left: 10%;
+            padding-right: 10%;
+            height: 85vh;
         }
     }
 
@@ -142,7 +145,7 @@
 
         @media (min-width: 1000px) {
             grid-row: 2 / 6;
-            grid-column: 3 / 5;
+            grid-column: 1 / 3;   //$
 
             &__img {
                 max-width: 100%;
@@ -153,15 +156,15 @@
     }
 
     .logo-text{
-        grid-row: 5 / 6;
-        grid-column: 5 / 9;
+        grid-row: 5 / 6;   
+        grid-column: 5 / 9;   
         text-align: center;
         font-weight: bold;
         font-size: 30px;
 
         @media (min-width: 1000px) {
             grid-row: 2 / 6;
-            grid-column: 5 / 9;
+            grid-column: 3 / 7;  // $
             align-self: center;
             font-size: 20px;
             margin: 0;
@@ -177,16 +180,16 @@
         margin: 0;
 
         @media (min-width: 1000px) {
-            grid-column: 3 / 11;
-            grid-row: 10 / 16;
+            grid-column: 1 / 10;   // &
+            grid-row: 10 / 17;
             text-align: left;
-            font-size: 35px;
+            font-size: 30px;
             font-weight: bold;
         }
 
         @media (min-width: 1350px) {
             font-size: 40px;
-            grid-column: 3 / 13;
+            grid-column: 1 / 11;  // $
             grid-row: 11 / 17;
             padding-left: 10px;;
         }
@@ -194,7 +197,7 @@
 
     .btn__join-event {
         grid-row: 8 / 10;
-        grid-column: 5 / 9;
+        grid-column: 5 / 9;     
         background-color: #AADC59;
         color: white;
         border-radius: 12px;
@@ -203,12 +206,12 @@
 
         @media (min-width: 1000px) {
             grid-row: 17 / 19;
-            grid-column: 3 / 8;
+            grid-column: 1 / 6;   // %
             font-size: 20px
         }
 
         @media (min-width: 1350px) {
-            grid-row: 18 / 20;
+            grid-row: 19 / 21;
         }
 
     }
@@ -218,8 +221,8 @@
 
         @media (min-width: 1000px) {
             display: inline-grid;
-            grid-column: 11 / 25;
-            grid-row: 6 / 25;
+            grid-column: 10 / 25;
+            grid-row: 5 / 25;
 
             &-img {
                 max-width: 100%;
@@ -230,8 +233,8 @@
         }
 
         @media (min-width: 1200px) {
-            grid-column: 12 / 25;
-            grid-row: 6 / 25;
+            grid-column: 9 / 25;
+            grid-row: 5 / 25;
         }
 
         @media (min-width: 1350px) {
