--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,7 @@
     .logo-div__img {
       max-width: 100%;
       max-height: 100%;
-      justify-self: center; } }
-    @media all and (orientation: portrait) and (min-height: 1000px) {
-      .logo-div__img {
-        max-width: 75%; } }
-
-@media all and (orientation: portrait) {
+      justify-self: center; }
   .logo-text {
     grid-row: 4 / 5;
     grid-column: 4 / 10;
@@ -31,33 +26,13 @@
   @media all and (orientation: portrait) and (min-width: 330px) {
     .logo-text {
       font-size: 23px; } }
-  @media all and (orientation: portrait) and (min-height: 1000px) {
-    .logo-text {
-      font-size: 30px; } }
-  @media all and (orientation: portrait) and (min-height: 1200px) {
-    .logo-text {
-      font-size: 40px; } }
 
 @media all and (orientation: portrait) {
   .heading {
     grid-row: 5 / 7;
     grid-column: 2 / 12;
     font-size: 16px;
-    text-align: center; } }
-  @media all and (orientation: portrait) and (min-width: 330px) {
-    .heading {
-      font-size: 20px; } }
-  @media all and (orientation: portrait) and (min-height: 800px) {
-    .heading {
-      font-size: 25px; } }
-  @media all and (orientation: portrait) and (min-height: 1000px) {
-    .heading {
-      font-size: 35px; } }
-  @media all and (orientation: portrait) and (min-height: 1200px) {
-    .heading {
-      font-size: 45px; } }
-
-@media all and (orientation: portrait) {
+    text-align: center; }
   .btn__join-event {
     grid-row: 7 / 8;
     grid-column: 4 / 10;
@@ -67,19 +42,7 @@
     border: none;
     height: 75%;
     font-weight: bold;
-    font-size: 14px; } }
-  @media all and (orientation: portrait) and (min-height: 800px) {
-    .btn__join-event {
-      margin-top: 30px;
-      font-size: 18px; } }
-  @media all and (orientation: portrait) and (min-height: 1000px) {
-    .btn__join-event {
-      font-size: 30px; } }
-  @media all and (orientation: portrait) and (min-height: 1200px) {
-    .btn__join-event {
-      font-size: 40px; } }
-
-@media all and (orientation: portrait) {
+    font-size: 14px; }
   .header-backdrop-div {
     grid-column: 1 / 12;
     grid-row: 8 / 13;
@@ -90,9 +53,54 @@
       align-self: end;
       justify-self: center;
       overflow: hidden; } }
-    @media all and (orientation: portrait) and (min-height: 1000px) {
-      .header-backdrop-div-img {
-        max-width: 75%; } }
+
+@media all and (orientation: portrait) and (min-height: 728px) {
+  .heading {
+    font-size: 18px; } }
+  @media all and (orientation: portrait) and (min-height: 728px) and (min-width: 500px) {
+    .heading {
+      font-size: 20px; } }
+
+@media all and (orientation: portrait) and (min-height: 788px) and (min-width: 450px) {
+  .heading {
+    font-size: 22px; } }
+
+@media all and (orientation: portrait) and (min-height: 788px) {
+  .logo-div {
+    display: inline-grid; } }
+  @media all and (orientation: portrait) and (min-height: 788px) and (min-width: 500px) {
+    .logo-div__img {
+      max-width: 80%;
+      max-height: 80%;
+      align-self: center; } }
+
+@media all and (orientation: portrait) and (min-height: 908px) {
+  .header-backdrop-div {
+    grid-column: 1 / 13; } }
+
+@media all and (orientation: portrait) and (min-height: 908px) and (min-width: 550px) {
+  .btn__join-event {
+    font-size: 18px; } }
+
+@media all and (orientation: portrait) and (min-height: 1000px) {
+  .heading {
+    font-size: 22px; } }
+  @media all and (orientation: portrait) and (min-height: 1000px) and (min-width: 800px) {
+    .heading {
+      font-size: 25px; } }
+
+@media all and (orientation: portrait) and (min-height: 1125px) and (min-width: 450px) {
+  .heading {
+    font-size: 30px; } }
+
+@media all and (orientation: portrait) and (min-height: 1200px) and (min-width: 1000px) {
+  .btn__join-event {
+    grid-column: 5 / 9;
+    font-size: 22px; } }
+
+@media all and (orientation: portrait) and (min-height: 1200px) and (min-width: 1000px) {
+  .heading {
+    font-size: 35px; } }
 
 @media all and (orientation: landscape) and (min-width: 1000px) {
   .header {
