--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,6 +6,11 @@
 }
 
 // Styles for header section - mobile and potrait mode
+
+// Portait mode - start at smallest screen - 304x568 
+// 1. Expand width until reach landscape mode
+// 2. Move up in height and repeat
+
 @media all and (orientation:portrait) {
 
 .logo-div {
@@ -19,9 +24,6 @@
         max-height: 100%;
         justify-self: center;
         
-        @media (min-height: 1000px) {
-            max-width: 75%; 
-        }
     }
 } 
 
@@ -38,15 +40,6 @@
     @media (min-width: 330px) {
         font-size: 23px;
     }
-
-    @media (min-height: 1000px) {
-        font-size: 30px; 
-    }
-
-    @media (min-height: 1200px) {
-       font-size: 40px; 
-    }
-
 }
   
 
@@ -55,22 +48,6 @@
     grid-column: 2 / 12;
     font-size: 16px;
     text-align: center;
-
-    @media (min-width: 330px) {
-        font-size: 20px;
-    }
-
-    @media (min-height: 800px){
-        font-size: 25px;
-    }
-
-    @media (min-height: 1000px) {
-        font-size: 35px; 
-    }
-
-    @media (min-height: 1200px) {
-        font-size: 45px; 
-    }
 }
 
 .btn__join-event {
@@ -83,19 +60,6 @@
     height: 75%;
     font-weight: bold;
     font-size: 14px;
-
-    @media (min-height: 800px){
-        margin-top: 30px;
-        font-size: 18px;
-    }
-
-    @media (min-height: 1000px){
-        font-size: 30px;
-    }
-
-    @media (min-height: 1200px){
-        font-size: 40px;
-    }
 }
 
 .header-backdrop-div {
@@ -110,8 +74,84 @@
         justify-self: center;
         overflow: hidden;
 
-        @media(min-height: 1000px) {
-            max-width: 75%;
+    }
+
+}
+
+@media (min-height: 728px) {
+    .heading {
+        font-size: 18px;
+
+        @media(min-width: 500px) {
+            font-size: 20px;
+        }
+    }
+}
+
+@media (min-height: 788px) {
+    .heading {
+        @media (min-width: 450px) {
+            font-size: 22px;
+        }
+    }
+
+    .logo-div {
+        display: inline-grid;
+        &__img {
+            @media (min-width: 500px) {
+                max-width: 80%;
+                max-height: 80%;
+                align-self: center;
+            }
+        }
+        
+    }
+}
+
+@media (min-height: 908px) {
+    .header-backdrop-div {
+        grid-column: 1 / 13;
+    }
+
+    .btn__join-event {
+        @media (min-width: 550px) {
+            font-size: 18px;
+        }
+    }
+}
+
+@media (min-height: 1000px) {
+    .heading {
+        font-size: 22px;
+
+        @media(min-width: 800px) {
+            font-size: 25px;
+        }
+    }
+
+}
+
+@media (min-height: 1125px) {
+    .heading {
+        
+        @media (min-width: 450px) {
+            font-size: 30px;
+        }
+    }
+
+}
+
+@media (min-height: 1200px) {
+    .btn__join-event {
+        @media(min-width: 1000px) {
+            grid-column: 5 / 9;
+            font-size: 22px;
+        }
+    }
+
+    .heading {
+        @media (min-width: 1000px) {
+            font-size: 35px;
         }
     }
 
